# rustray

./: .gitignore  Cargo.toml  Readme.md  readme.md
denoise/: .gitignore  Cargo.toml  Readme.md  build.rs
denoise/src/: main.rs
learning/: Cargo.toml
learning/src/: arrays.rs  cli.rs  conditionals.rs  crates_modules.rs  enums.rs  functions.rs  loops.rs  main.rs  options.rs  pointer_ref.rs  print.rs  rwlock.rs  smartpointer.rs  strings.rs  structs.rs  threads.rs  traits.rs  tuples.rs  types.rs  vars.rs  vectors.rs
raytracer/: .gitignore  Cargo.toml  Readme.md
raytracer/scene/: corset.json  default_render_settings.json  earth.json  environment.json  floor.json  helmet.json  kBert_thumbsup.blend  kBert_thumbsup.blend1  kBert_thumbsup.mtl  kBert_thumbsup_bevel.mtl  kbert.json  monkey.blend  monkey.json  monkey.mtl  room.json  spheres.json
raytracer/scene/earth/: source.txt
raytracer/scene/floor/: from.txt
raytracer/scene/models/helmet/: from.txt
raytracer/scene/models/kBert/: kBert_thumbsup.blend  kBert_thumbsup_bevel.mtl
raytracer/scene/models/monkey/: monkey.blend  monkey.glb
raytracer/scene/textures/environment/: source.txt
raytracer/scene/textures/wall/: source.txt
raytracer/src/: animation.rs  camera.rs  helper.rs  main.rs  pixel_color.rs  raytracing.rs  renderer.rs  run.rs  scene.rs
raytracer/src/shape/: bounding_box.rs  mesh.rs  mod.rs  sphere.rs
scene/: earth.json  earth_in_room.json  floor_reflective.json  helmet.json  kbert_in_room.json  latern.json  lotus.json  monkey.json  monkey_in_room.json  room-no-textures.json  room.json  spheres.json  spheres_in_room.json  sponza.json  workbench.json
scene/models/monkey/: monkey.gltf  monkey2.blend
scene/textures/leather/: source.txt
sdl/: Cargo.toml
sdl/src/: main.rs
src/: camera.rs  helper.rs  main.rs  post_processing.rs  raytracing.rs  renderer.rs  run.rs  scene.rs
src/shape/: mesh.rs  mod.rs  sphere.rs
