[package]
name = "raytracer"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
# Reduce binary size
panic = "abort"
#strip = "symbols"
# Improve performance but increase compile time
#lto = "fat"
#codegen-units = 1
#debug = true

[dependencies]

egui = "0.21.0"
eframe = "0.21.2"
egui_extras = "0.21.0"
rand = "*"
num_cpus = "*"
nalgebra = "0.32.1"
parry3d = "0.13.0"
backtrace = "0.3"
image = "0.24.5"
chrono = "0.4"
tobj = "4.0.0"
serde_json = "1.0"
easy-gltf = "1.0.0"
attohttpc = "0.25.0"
bvh = "0.7"
regex = "1"
rfd = "0.11"