[package]
name = "rustray"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
# Reduce binary size
panic = "abort"
#strip = "symbols"
# Improve performance but increase compile time
#lto = "fat"
#codegen-units = 1
#debug = true

[dependencies]

egui = "0.23.0"
eframe = "0.23.0"
egui_extras = "0.23.0"
rand = "*"
num_cpus = "*"
nalgebra = "0.32.1"
parry3d = "0.13.0"
backtrace = "0.3"
image = "0.24.5"
chrono = "0.4"
tobj = "4.0.0"
serde_json = "1.0"
easy-gltf = { version = "1.1.0", features = ["names"] }
attohttpc = "0.26.1"
bvh = "0.7"
regex = "1"
rfd = "0.12.0"