[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.1", features = ["bundled", "static-link"] }
rand = "*"
num_cpus = "*"
nalgebra = "0.30.0"
parry3d = "0.8.0"
backtrace = "0.3"
image = "0.23.14"
chrono = "0.4"