[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
# Reduce binary size
panic = "abort"
#strip = "symbols"
# Improve performance but increase compile time
#lto = "fat"
#codegen-units = 1

[dependencies]
sdl2 = { version = "0.35.1", features = ["bundled", "static-link"] }
rand = "*"
num_cpus = "*"
nalgebra = "0.30.0"
parry3d = "0.8.0"
backtrace = "0.3"
image = "0.24.0"
chrono = "0.4"
tobj = "3.2.0"
serde_json = "1.0"
easy-gltf = "0.1.4"
attohttpc = "0.18.0"
bvh = "0.6.0"
regex = "1"